--- a/index.html
+++ b/index.html
@@ -30,40 +30,34 @@
     </header>
  <main> 
  <!--Банер-->
-<section class="section">
-    <div class="container">
+    <div class="hero">
         <h1 class="hero-title">Еффективные решения для вашего бизнеса</h1>
          <a href="" class="button-hero">Заказать услугу</a>
     </div>
-</section>
 <!--Принципи роботи-->
 <section class="section">
     <div class="container">
-        <h2 class="section-title"> Принципи роботи</h2>  <!--скрить-->
+        <h2 class="section-title hidden"> Принципи роботи</h2>  <!--скрить-->
     <ul class="feature-list">
-        <li class="item">
-        <a href="/" > <img class="feature-icon" src="./images/antenna.svg" alt="Антена"/></a>
+    <li class="item-feature">
         <h3 class="title">Внимание к деталям</h3>
         <p class="text-feature"> 
            Идейные соображения, а также начало повседневной работы по формированию позиции.
         </p>
         </li> 
-        <li class="item">
-            <a href="/"> <img class="feature-icon" src="./images/clock.svg" alt="Часи"/></a>  
+        <li class="item-feature">  
         <h3 class="title">Пунктуальность</h3>
         <p class="text-feature"> 
             Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
         </p>
         </li> 
-        <li class="item">
-            <a href="/"> <img class="feature-icon" src="./images/comp.svg" alt="Компютер"/></a>
+        <li class="item-feature">
         <h3 class="title">Планирование</h3>
         <p class="text-feature"> 
             Равным образом консультация с широким активом в значительной степени обуславливает.
         </p>
         </li>  
-      <li class="item">
-        <a href="/"> <img class="feature-icon" src="./images/space.svg" alt="Космотавт"/></a>
+      <li class="item-feature">
         <h3 class="title">Современные технологии</h3>
         <p class="text-feature"> 
             Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -134,7 +128,7 @@
         </ul>
         </li>
 
-        <li class="team-box">
+        <li class="team-last">
             <img src="./images/martin.png" alt="Фото сотрудника" width=270>
             <h3 class="title">Martin Doe</h3>
             <p class="team-title">UI Designer</p>
